# PERTATA

./: CMakeLists.txt  Player.cpp  Player.h  Property.cpp  Property.h  main.cpp
